# MyAtmMachine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: account-info.h  account.h  atm-event.h  atm-machine-global.h  atm-machine.h  atm-state-enum.h  atm-state.h  bank-server.h  card-reader.h  cash-bin.h  cash-card.h  operation-result.h  pin-number.h
src/: account-info.cpp  account.cpp  atm-event.h  atm-machine.cpp  atm-state.cpp  atm-state.h  cash-card.cpp  operation-result.cpp  pin-number.cpp
test/: mock-bank-server.h  mock-card-reader.h  mock-cash-bin.h  test-atm-machine.cpp  test-atm-state.cpp
